# modman

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/modman/: __version__.py  lib.py  main.py
