[build-system]
requires = ["setuptools", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"


[project]
name = "modman"
description = "Simple CLI to interact with Modrinth and manage server mods."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = { text = "GNU GPLv3" }
authors = [
    {name = "Nexus", email = "pip@nexy7574.co.uk"}
]
dynamic = ["version", "dependencies"]

[project.urls]
Source = "https://github.com/nexy7574/modman"
Tracker = "https://github.com/nexy7574/modman/issues"
Funding = "https://ko-fi.com/nexy7574"

[project.scripts]
modman = "modman.main:main"

[tool.setuptools_scm]
write_to = "src/modman/__version__.py"

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312"]
include = 'src/modman(/utils)?/.+\.py'

[tool.isort]
profile = "black"
src_paths = ["src/modman"]


[tool.ruff]
# Replacement for isort & black
exclude = [".git"]
target-version = "py39"
line-length = 120
indent-width = 4
respect-gitignore = true

[tool.ruff.lint]
fixable = ["ALL"]
ignore =   ["F403", "F405"]
select = [
    "E",     # pycodestyle
    "F",     # Pyflakes
    "I001",  # isort
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
detect-same-package = true

[tool.ruff.lint.pycodestyle]
max-doc-length = 120
max-line-length = 120
